	* Fixed bug #16926: Database is not updated during workspace-migration wizard
	* Fixed bug #17102: migrateWorkspaces in Install-Tool doesn't show up in all relevant situations (Thanks to Tolleiv Nietsch)

2011-01-20  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #17116: All images get reduced to 25x25px upon saving if no size is set

2011-01-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17162: Missing localization in t3lib_tsstyleconfig 

2011-01-20  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17044: Styling of TCEforms with renderMode=checkbox

2011-01-20  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #17143: Unclean property declaration in t3lib_mail_Message API (Thanks to Steffen Müller)
	* Fixed issue #17153: Protect C(R)UD actions against CSRF (Thanks to Helmut Hummel)
	* Fixed bug #17163: CSH tooltips should be placed nearer to the text (Thanks to Stanislas Rolland)
	* Fixed issue #17109: Make the t3lib_utility_Mail hook subscriber optional / configureable

2011-01-20  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to #17073: Unset fsMod.recentIDs when opening module via JS jump() (Thanks to Stefan Galinski)

2011-01-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17156: htmlArea RTE: Disable Cell merge button in FF when less than two cells are selected
	* Fixed bug #17157: htmlArea RTE: Not enabled in various browser/system combinations

2011-01-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug in tx_em_Connection_ExtDirectServer (from em svn)

2011-01-19  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #16462: Use constant LF instead of chr(10) (Thanks to Georg Ringer)

2011-01-19  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17138: Superfluous backspace in Error Message if no Install Tool Password is set (Thanks to Sebastian Michaelsen)
	* Fixed bug #17144: Adjust CSH tooltip show and hide delay (Thanks to Jens Hoffmann and Lars Zimmermann)
	* Follow-up to #17073: CSS clean-up